--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,6 +10,7 @@
     <%= stylesheet_link_tag "site" %>
   </head>
   <body>
+    <%= partial 'shared/navbar' %>
     <%= yield %>
     <%= javascript_include_tag "site" %>
   </body>
