--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,7 +1,14 @@
 ---
 title: Middleman template with webpack
+page_id: :home
 ---
 
-<h1>
-  <span id="banner-typed-text"></span>
-</h1>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h1>
+        <span id="banner-typed-text"></span>
+      </h1>
+    </div>
+  </div>
+</div>
