Create all the pages

--- a/source/shared/_navbar.html.erb
+++ b/source/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <header class="main-header">
   <div class="container">
     <nav class="navbar navbar-expand-lg main-nav px-0">
-      <a class="navbar-brand" href="/mojo">
+      <a class="navbar-brand" href="/">
         <%= image_tag "logo.jpg", alt: "Mikaël Asselyn coiffure" %>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,16 +12,16 @@
       <div class="collapse navbar-collapse" id="mainMenu">
         <ul class="navbar-nav ml-auto text-uppercase f1">
           <li class="<%= 'active' if current_page.data.page_id == :home %>">
-            <a href="/">Accueil</a>
+            <%= link_to "Accueil", "/" %>
           </li>
           <li class="<%= 'active' if current_page.data.page_id == :haircut %>">
-            <a href="/coupe">Coupe</a>
+            <%= link_to "Coupes", "/coupes.html" %>
           </li>
           <li class="<%= 'active' if current_page.data.page_id == :color %>">
-            <a href="/couleur-et-soin">Couleur & soin</a>
+            <%= link_to "Couleurs & soins", "/couleurs-et-soins.html" %>
           </li>
           <li class="<%= 'active' if current_page.data.page_id == :contact %>">
-            <a href="/contact">Contact</a>
+            <%= link_to "Contact", "/contact.html" %>
           </li>
         </ul>
       </div>
