--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,12 +1,19 @@
 ---
-title: Middleman template with webpack
+title: Mikaël Asselyn - Coiffeur Paris
 page_id: :home
 ---
 
 <div class="container">
   <div class="row">
     <div class="col">
-
+      <p class="text-center">
+        <%= image_tag "salon.png", alt: "alttext", class: 'w-100' %>
+      </p>
+      <p>Le temps est précieux pour tout le monde, pour cela MIKAEL ASSELYN reçoit client par client afin de pouvoir avoir
+      un maximum d’écoute et de concentration.</p>
+      <p>Situé dans le quartier discret et élégant du 7 ème arrondissement de Paris le salon privé MIKAEL ASSELYN est là pour vous.</p>
+      <p>Un moment en tête à tête, un salon pour vous seul afin de recevoir toute l’attention nécessaire pour une
+      prestation toute en sérénité.</p>
     </div>
   </div>
 </div>
