Create footer and social links components

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -12,6 +12,8 @@
   <body>
     <%= partial 'shared/navbar' %>
     <%= yield %>
+    <%= partial 'shared/social_links' %>
+    <%= partial 'shared/footer' %>
     <%= javascript_include_tag "site" %>
   </body>
 </html>
