--- a/source/stylesheets/config/global.scss
+++ b/source/stylesheets/config/global.scss
@@ -1,3 +1,9 @@
+// Breakpoints
+$breakpoint-xs: 576px;
+$breakpoint-sm: 768px;
+$breakpoint-md: 992px;
+$breakpoint-lg: 1200px;
+
 * {
   font-family: $body-font;
 }
