Fix ui of social links

--- a/source/shared/_social_links.html.erb
+++ b/source/shared/_social_links.html.erb
@@ -1,17 +1,12 @@
 <div class="right-links">
   <div class="social-link">
     <a href="<%= data.links.facebook %>" target="_blank">
-      <i class="fab fa-facebook-f"></i>
+      <%= image_tag "social-icons/facebook.svg", alt: "Mikael Asselyn on facebook" %>
     </a>
   </div>
   <div class="social-link">
     <a href="<%= data.links.instagram %>" target="_blank">
-      <i class="fab fa-instagram"></i>
-    </a>
-  </div>
-  <div class="social-link">
-    <a href="<%= data.links.pinterest %>" target="_blank">
-      <i class="fab fa-pinterest-p"></i>
+      <%= image_tag "social-icons/instagram.svg", alt: "Mikael Asselyn on instagram" %>
     </a>
   </div>
 </div>
