--- a/source/shared/_navbar.html.erb
+++ b/source/shared/_navbar.html.erb
@@ -12,16 +12,16 @@
       <div class="collapse navbar-collapse" id="mainMenu">
         <ul class="navbar-nav ml-auto text-uppercase f1">
           <li class="<%= 'active' if current_page.data.page_id == :home %>">
-            <%= link_to "Accueil", "/" %>
+            <%= link_to "Accueil", "/fr" %>
           </li>
           <li class="<%= 'active' if current_page.data.page_id == :haircut %>">
-            <%= link_to "Coupes", "/coupes.html" %>
+            <%= link_to "Coupes", "/fr/coupes.html" %>
           </li>
           <li class="<%= 'active' if current_page.data.page_id == :color %>">
-            <%= link_to "Couleurs & soins", "/couleurs-et-soins.html" %>
+            <%= link_to "Couleurs & soins", "/fr/couleurs-et-soins.html" %>
           </li>
           <li class="<%= 'active' if current_page.data.page_id == :contact %>">
-            <%= link_to "Contact", "/contact.html" %>
+            <%= link_to "Contact", "/fr/contact.html" %>
           </li>
         </ul>
       </div>
