--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -11,7 +11,9 @@
   </head>
   <body>
     <%= partial 'shared/navbar' %>
-    <%= yield %>
+    <div id="fixed-footer">
+      <%= yield %>
+    </div>
     <%= partial 'shared/social_links' %>
     <%= partial 'shared/footer' %>
     <%= javascript_include_tag "site" %>
