Create legals page

--- a/source/shared/_footer.html.erb
+++ b/source/shared/_footer.html.erb
@@ -1,14 +1,14 @@
 <div id="footer">
   <div class="container">
     <div class="row">
-      <div class="col-sm">
+      <div class="col-md mb-4">
         <h4 class="h5">Mikael Asselyn</h4>
         <p>Coiffeur ﹒ Coloriste</p>
         <p class="font-weight-light font-italic pr-4">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta facere sint quae voluptas repellat accusamus.
         </p>
       </div>
-      <div class="col-sm">
+      <div class="col-md mb-4">
         <h4 class="h5">Réseaux sociaux</h4>
         <p class="mb-1 d-flex align-items-center">
           <% link_to data.links.facebook, target: "_blank", class: "link-uncolored link-undecored" do %>
@@ -21,7 +21,7 @@
           <% end %>
         </p>
       </div>
-      <div class="col-sm">
+      <div class="col-md mb-4">
         <h4 class="h5">Contact</h4>
         <p class="mb-1 d-flex align-items-center">
           <%= image_tag "icons/house.svg", alt: "Mikael Asselyn address in paris", width: "16", class: "mr-2" %>
@@ -39,7 +39,7 @@
       <div class="row">
         <div class="col">
           <p class="text-right p-3 text-small m-0">
-            <%= link_to "Mentions légales", "/mentions-legales", class: "link-uncolored" %>
+            <%= link_to "Mentions légales", "/mentions-legales.html", class: "link-uncolored" %>
           </p>
         </div>
       </div>
