--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,7 +3,7 @@ title: Mikaël Asselyn - Coiffeur Paris
 page_id: :home
 ---
 
-<div class="container">
+<div class="container mb-5">
   <div class="row">
     <div class="col-md font-weight-light">
       <p class="text-center">
