Add pages color and care

--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -5,12 +5,8 @@ page_id: :contact
 
 <div class="container mb-5">
   <div class="row">
-    <div class="col">
-      <h1 class="mb-4">Contact</h1>
-    </div>
-  </div>
-  <div class="row">
     <div class="col-md font-weight-light">
+      <h1 class="h3 mb-5">Contact</h1>
       <h4 class="h5 mb-3">Adresse</h4>
       <p class="mb-1"><%= data.contact.name %></p>
       <p class="mb-4"><%= data.contact.address %></p>
@@ -24,7 +20,7 @@ page_id: :contact
         <tbody>
           <tr>
             <td>Lundi</td>
-            <td>12:00 - 19:00</td>
+            <td>12:30 - 19:00</td>
           </tr>
           <tr>
             <td>Mardi</td>
