--- a/source/coupes.html.erb
+++ b/source/coupes.html.erb
@@ -5,15 +5,14 @@ page_id: :haircut
 
 <div class="container">
   <div class="row">
-    <div class="col">
-      <p class="text-center">
-        <%= image_tag "coupe1.png", alt: "alttext", class: 'w-100' %>
-      </p>
-      <h1>Les coupes</h1>
-      <p>L’œil aiguisé de MIKAEL sera analyser la forme, les structures et les accents de votre visage afin de créer et de styliser coupe et coiffure contemporaine.</p>
+    <div class="col-md">
+      <h1 class="h3 mb-5">Les coupes</h1>
+      <p class="mb-5">L’œil aiguisé de MIKAEL sera analyser la forme, les structures et les accents de votre visage afin de créer et de styliser coupe et coiffure contemporaine.</p>
       <p>HOMMES ET FEMMES</p>
+    </div>
+    <div class="col-md">
       <p class="text-center">
-        <%= image_tag "coupe2.png", alt: "alttext", class: 'w-100' %>
+        <%= image_tag "coupe2.png", alt: "alttext", class: 'w-100 px-4' %>
       </p>
     </div>
   </div>
