--- a/source/stylesheets/config/colors.scss
+++ b/source/stylesheets/config/colors.scss
@@ -1,7 +1,6 @@
 // Define variables for your color scheme
 
 $black: #201C1C;
-$yellow: #FFB923;
-$grey: #F7F7F7;
-$dark-grey: #e6e6e6;
+$grey: #fff3e2;
+$dark-grey: #f5e3cb;
 $white: #FFFFFF;
