--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -28,7 +28,7 @@
   margin-right: 30px;
 
   &.active {
-    border-bottom: 1px solid $black;
+    border-bottom: 1px solid $dark-grey;
   }
 }
 
@@ -73,7 +73,8 @@
   width: 100%;
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
-  margin-bottom: 24px;
+  margin-bottom: 64px;
+  border-bottom: 1px solid $dark-grey;
 }
 
 .main-header.fixed-nav {
@@ -102,6 +103,12 @@
 /* main-header end */
 @media (max-width: 991px) {
   /*header starts*/
+
+  #mainMenu li {
+    width: fit-content;
+    margin: auto;
+    margin-bottom: 8px;
+  }
 
   .collapse.in {
     display: block !important;
