Update with owner feedbacks

--- a/source/couleurs.html.erb
+++ b/source/couleurs.html.erb
@@ -8,13 +8,13 @@ page_id: :color
     <div class="col-md">
       <h1 class="h3 mb-5">La couleur</h1>
       <p>Fervent technicien dans l’âme , MIKAEL saura vous sublimer en accord avec votre morphostyle.</p>
-      <p>Diverses techniques et création personnel vous sera proposées :</p>
+      <p>Diverses techniques et créations personnelles vous seront proposées :</p>
       <p>De la coloration végétale au balayage en respectant la fibre capillaire afin de profiler mouvements et captations
       de lumières avec un effet le plus naturel possible.</p>
     </div>
     <div class="col-md">
       <p class="text-center">
-        <%= image_tag "couleur.png", alt: "alttext", class: 'w-100 px-4' %>
+        <%= image_tag "couleur2.png", alt: "alttext", class: 'w-100 px-4' %>
       </p>
     </div>
   </div>
