--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,7 +7,7 @@ page_id: :home
   <div class="row">
     <div class="col-md font-weight-light">
       <p class="text-center">
-        <%= image_tag "salon.png", alt: "alttext", class: 'w-100' %>
+        <%= image_tag "salon2.png", alt: "alttext", class: 'w-100' %>
       </p>
     </div>
     <div class="col-md font-weight-light">
@@ -15,8 +15,7 @@ page_id: :home
       <p>Le temps est précieux pour tout le monde, pour cela MIKAEL ASSELYN reçoit client par client afin de pouvoir avoir
       un maximum d’écoute et de concentration.</p>
       <p>Situé dans le quartier discret et élégant du <strong>7 ème arrondissement de Paris</strong> le salon privé MIKAEL ASSELYN est là pour vous.</p>
-      <p>Un moment en tête à tête, un salon pour vous seul afin de recevoir toute l’attention nécessaire pour une
-      prestation toute en sérénité.</p>
+      <p>Une prestation toute en sérénité.</p>
     </div>
   </div>
 </div>
