--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -28,7 +28,7 @@
   margin-right: 30px;
 
   &.active {
-    border-bottom: 1px solid $dark-grey;
+    border-bottom: 1px solid $dark-blue;
   }
 }
 
@@ -74,7 +74,7 @@
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
   margin-bottom: 64px;
-  border-bottom: 1px solid $dark-grey;
+  border-bottom: 1px solid $dark-blue;
 }
 
 .main-header.fixed-nav {
@@ -97,7 +97,7 @@
   color: #fff;
 }
 .main-header .navbar-brand img {
-  max-width: 40px;
+  max-width: 64px;
   animation: fadeInLeft 0.4s both 0.4s;
 }
 /* main-header end */
