--- a/source/soins-detente.html.erb
+++ b/source/soins-detente.html.erb
@@ -14,7 +14,7 @@ page_id: :care
     </div>
     <div class="col-md">
       <p class="text-center">
-        <%= image_tag "couleur-soin.png", alt: "alttext", class: 'w-100 px-4' %>
+        <%= image_tag "soin.png", alt: "alttext", class: 'w-100 px-4' %>
       </p>
     </div>
   </div>
