--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -8,8 +8,8 @@
   margin-top: 32px;
 
   .legals {
-    // border-top: 1px $grey solid;
+    // border-top: 1px $light-blue solid;
     opacity: 0.7;
-    background: $grey;
+    background: $light-blue;
   }
 }
