--- a/source/stylesheets/config/colors.scss
+++ b/source/stylesheets/config/colors.scss
@@ -1,6 +1,7 @@
 // Define variables for your color scheme
 
 $black: #201C1C;
-$grey: #fff3e2;
-$dark-grey: #f5e3cb;
+$light-blue: #dae4ff;
+$blue: #b9ceff;
+$dark-blue: #17398F;
 $white: #FFFFFF;
