--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -20,7 +20,7 @@ page_id: :contact
         <tbody>
           <tr>
             <td>Lundi</td>
-            <td>12:30 - 19:00</td>
+            <td>Fermé</td>
           </tr>
           <tr>
             <td>Mardi</td>
